# rusty_llama

./: .gitignore  BACKLOG.md  Cargo.toml  HANDOFF.md  PERFORMANCE.md  README.md  RELEASE_NOTES.md  gap-analysis.md
.cargo/: config.toml
docs/Architecture/: 00-overview.md  01-model-and-forward-pass.md  02-backend-trait-and-cpu.md  03-gpu-backend-wgpu.md  04-cuda-backend.md  05-quantization.md  06-gguf-and-loading.md  07-tokenizer-and-sampler.md  08-testing-benchmarking-parity.md  09-status-and-roadmap.md  10-evolution-plan.md  README.md
docs/Architecture/plans/: README.md  phase-0-foundations.md  phase-1-breadth.md  phase-2-decode-gemv.md  phase-3-archs.md  phase-4-server.md  phase-5-flash-attention.md  phase-5-grammar.md  phase-6-parity.md  phase-7-int8-mmq.md
docs/Research/: 00-overview.md  01-ggml-core-and-graph.md  02-backends-and-dispatch.md  03-cuda-kernels.md  04-quantization.md  05-gguf-and-model-loading.md  06-inference-pipeline.md  07-tokenization-and-sampling.md  08-capabilities-and-tooling.md  09-rusty-llama-gap-analysis.md  README.md
docs/Reviews/: 2026-06-20-deep-review.md  2026-06-21-divergence-audit.md
examples/: make_dummy.rs
scripts/: download_assets.sh  gen_pretokenize_golden.py
src/: adapter.rs  arch.rs  bench_util.rs  chat.rs  config.rs  dummy.rs  error.rs  gguf.rs  grammar.rs  lib.rs  loader.rs  main.rs  math.rs  model.rs  quant.rs  sampler.rs  server.rs  tensor.rs  tokenizer.rs
src/backend/: cpu.rs  cuda.rs  gpu.rs  mod.rs
tests/: gguf.rs  gpu_parity.rs  integration.rs  prefill.rs  pretokenize.rs  server.rs
tests/fixtures/: pretokenize_golden.rs
