[package]
name = "rusty_llama"
version = "0.1.0"
edition = "2021"
description = "A from-scratch Llama (llama2.c-format) inference engine in Rust"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_llama"
readme = "README.md"

[dependencies]
fancy-regex = "0.18.0"
memmap2 = "0.9"
pollster = { version = "0.4.0", optional = true }
rayon = "1"
wgpu = { version = "29.0.3", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
# Optional GPU backend (wgpu: Vulkan/DX12/Metal). Off by default so the
# baseline build stays at three small dependencies.
gpu = ["dep:wgpu", "dep:pollster"]
