[package]
name = "rusty_llama"
version = "0.1.0"
edition = "2021"
description = "A from-scratch Llama (llama2.c-format) inference engine in Rust"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_llama"
readme = "README.md"

[dependencies]
cudarc = { version = "0.19", optional = true, default-features = false }
fancy-regex = "0.18.0"
half = { version = "2", optional = true }
memmap2 = "0.9"
pollster = { version = "0.4.0", optional = true }
rayon = "1"
wgpu = { version = "29.0.3", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
# Optional GPU backend (wgpu: Vulkan/DX12/Metal). Off by default so the
# baseline build stays at three small dependencies.
gpu = ["dep:wgpu", "dep:pollster"]

# Optional NVIDIA CUDA backend (cuBLASLt tensor cores), behind cudarc. Off by
# default and NVIDIA-only. `dynamic-loading` means no CUDA libraries or nvcc are
# needed at build time — cudarc dlopen's the driver/cuBLASLt at run time, so this
# feature builds fine on a CUDA-less machine and the backend fails gracefully
# there. `cuda-13020` selects cudarc's newest (13.2) sys bindings, ABI-compatible
# with the installed 13.3 runtime; `f16` pulls the half crate for the f16 GEMM.
cuda = [
    "dep:cudarc",
    "dep:half",
    "cudarc/std",
    "cudarc/cuda-13020",
    "cudarc/dynamic-loading",
    "cudarc/cublaslt",
    "cudarc/f16",
]
