[package]
name = "rusty_llama"
version = "0.1.0"
edition = "2021"
description = "A from-scratch Llama (llama2.c-format) inference engine in Rust"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_llama"
readme = "README.md"

[dependencies]
cudarc = { version = "0.19", optional = true, default-features = false }
fancy-regex = "0.18.0"
half = { version = "2", optional = true }
memmap2 = "0.9"
# Renders a GGUF's actual embedded `tokenizer.chat_template` Jinja source
# (falling back to the hardcoded families in src/chat.rs only when a GGUF has
# no template string at all) instead of pattern-matching known families.
# Not feature-gated like gpu/cuda/server — chat templating is core, not
# optional — so this is the fourth base dependency (was three).
minijinja = "2"
pollster = { version = "0.4.0", optional = true }
rayon = "1"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
wgpu = { version = "29.0.3", optional = true }

# `thin` LTO + `codegen-units=1` is deliberate. Measured 2026-06-19 on the
# TinyLlama-Q4_K_M CPU path: `lto="fat"` is a wash-to-slightly-worse, and full PGO
# (instrument → profile → profile-use) regressed ~3% prefill / ~2% decode in an
# interleaved A/B (4/4 rounds). The hot path is autovectorized SIMD kernels that
# `opt-level=3` + `codegen-units=1` + `target-cpu=native` already optimize; whole-
# program LTO and profile-guided block-layout disrupt that codegen. Don't "upgrade"
# to fat-LTO/PGO without re-measuring. See BACKLOG.md "L4".
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
# Optional GPU backend (wgpu: Vulkan/DX12/Metal). Off by default so the
# baseline build stays at three small dependencies.
gpu = ["dep:wgpu", "dep:pollster"]

# Optional OpenAI-compatible HTTP server (`serve` subcommand). Off by default so
# the base build stays dependency-light; pulls only serde/serde_json (the HTTP/1.1
# layer is hand-rolled on std::net). Works with any backend.
server = ["dep:serde", "dep:serde_json"]

# Optional NVIDIA CUDA backend (cuBLASLt tensor cores), behind cudarc. Off by
# default and NVIDIA-only. `dynamic-loading` means no CUDA libraries or nvcc are
# needed at build time — cudarc dlopen's the driver/cuBLASLt at run time, so this
# feature builds fine on a CUDA-less machine and the backend fails gracefully
# there. `cuda-13020` selects cudarc's newest (13.2) sys bindings, ABI-compatible
# with the installed 13.3 runtime; `f16` pulls the half crate for the f16 GEMM.
cuda = [
    "dep:cudarc",
    "dep:half",
    "cudarc/std",
    "cudarc/cuda-13020",
    "cudarc/dynamic-loading",
    "cudarc/cublaslt",
    "cudarc/nvrtc",
    "cudarc/f16",
]
